force-app/main/default/objects/Review__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Indicates the expected due date for the review to be completed</description>
    <inlineHelpText>Indicates the expected due date for the review to be completed</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>