force-app/main/default/objects/Review__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>