force-app/main/default/objects/Review__c/fields/FundingRequest__c.field-meta.xml
<CustomField>
    <fullName>FundingRequest__c</fullName>
    <description>The name of the Funding Request being reviewed.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Request</label>
    <referenceTo>Funding_Request__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>