force-app/main/default/objects/Review__c/fields/IsAssignedToRunningUser__c.field-meta.xml
<CustomField>
    <fullName>IsAssignedToRunningUser__c</fullName>
    <description>Marked as true if the running user is the user in the Assigned To lookup field.</description>
    <formula>AssignedTo__c == $User.Id</formula>
    <label>Is Assigned To Running User</label>
    <type>Checkbox</type>
</CustomField>