force-app/main/default/objects/Review__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <description>The date the Review was submitted.</description>
    <inlineHelpText>The date the Review was submitted.</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>