force-app/main/default/objects/Review__c/listViews/MyOpenReviews.listView-meta.xml
<ListView>
    <fullName>MyOpenReviews</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsAssignedToRunningUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open Reviews</label>
</ListView>