force-app/main/default/objects/Review__c/listViews/OpenReviews.listView-meta.xml
<ListView>
    <fullName>OpenReviews</fullName>
    <columns>FundingRequest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>Comments__c</columns>
    <columns>AssignedTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <label>Open Reviews</label>
</ListView>